[project]
name = "recipie-upload"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "openai>=2.8.1",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recipe_app*"]
exclude = ["logs*", "tests*"]
